tdf#155232: drop m_aFlatParaList from SwXFlatParagraphIterator

There is no need to keep those references. The set was there from
the beginning, introduced in commits 677eba2322d2753951024c688d59553182bf2fbd
(INTEGRATION: CWS gcframework_DEV300 (1.1.2); FILE ADDED, 2008-02-26) and
ba76230f6f677774b0d333da946a7e487acbeb0b (INTEGRATION: CWS gcframework_DEV300
(1.1.2); FILE ADDED, 2008-02-26).

Change-Id: Iaf2482adb0aac063ad106c4198baf74577a75bf4
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151712
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit a7ce722b476c4bb0c9a113ae0c2759181edfe48f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151771
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>