sw/source/core/unocore/unoflatpara.cxx
@@ -481,8 +481,6 @@ uno::Reference< text::XFlatParagraph > SwXFlatParagraphIterator::getNextPara()
         const OUString& aExpandText = aConversionMap.getViewText();
 
         xRet = new SwXFlatParagraph( *pRet, aExpandText, aConversionMap );
-        // keep hard references...
-        m_aFlatParaList.insert( xRet );
     }
 
     return xRet;
@@ -531,8 +529,6 @@ uno::Reference< text::XFlatParagraph > SwXFlatParagraphIterator::getParaAfter(co
         const OUString& aExpandText = aConversionMap.getViewText();
 
         xRet = new SwXFlatParagraph( *pNextTextNode, aExpandText, aConversionMap );
-        // keep hard references...
-        m_aFlatParaList.insert( xRet );
     }
 
     return xRet;
@@ -577,8 +573,6 @@ uno::Reference< text::XFlatParagraph > SwXFlatParagraphIterator::getParaBefore(c
         const OUString& aExpandText = aConversionMap.getViewText();
 
         xRet = new SwXFlatParagraph( *pPrevTextNode, aExpandText, aConversionMap );
-        // keep hard references...
-        m_aFlatParaList.insert( xRet );
     }
 
     return xRet;
